--- a/Sep-14/package.json
+++ b/Sep-14/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@webpack-cli/generators": "^2.5.0",
-    "autoprefixer": "^10.4.9",
+    "autoprefixer": "^10.4.11",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
@@ -40,6 +40,7 @@
     "@pixi/particles": "^6.1.0",
     "@pixi/sound": "^4.3.0",
     "gsap": "^3.11.1",
+    "pixi-particles": "^4.3.1",
     "pixi-spine": "^3.1.0",
     "pixi.js": "^6.5.3"
   }
